implemented barber appointment page(fixed style4 not inplementing issue)

--- a/views/barbershops.ejs
+++ b/views/barbershops.ejs
@@ -9,18 +9,7 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <img src="./images/logo3.jpg" alt="logo" id="logo" />
-        <ul id="navlist">
-          <li>Home</li>
-          <li>About Us</li>
-          <li>View more</li>
-          <li>Info</li>
-          <li>Contact Us</li>
-        </ul>
-      </nav>
-    </header>
+    <%- include('./partials/navbar') %>
     <main>
       <h1>Shorter Wait, Fresher Look</h1>
       <h1>Find Your Shop!</h1>
