--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,8 @@
 <header>
   <nav>
-    <img src="./images/logo3.jpg" alt="logo" id="logo" />
+    <img src="/images/logo3.jpg" alt="logo" id="logo" />
     <ul id="navlist">
-      <li>Home</li>
+      <li><a href="/students/shops">Home</a></li>
       <li>About Us</li>
       <li>View more</li>
       <li>Info</li>
