--- a/views/barberinput.ejs
+++ b/views/barberinput.ejs
@@ -25,6 +25,7 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         text-align: center;
         max-width: 400px;
+        margin-bottom: 200px;
       }
       h2 {
         color: #333;
@@ -58,10 +59,11 @@
         background: #27ae60;
       }
     </style>
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="/style2.css" />
+    <link rel="stylesheet" href="/style4.css" />
   </head>
   <body>
-    <!-- <%- include('./partials/navbar') %> -->
+    <%- include('./partials/navbar') %>
     <div class="form-container">
       <h2>Book a Haircut</h2>
       <form action="" method="post">
