--- a/views/barberinputpost.ejs
+++ b/views/barberinputpost.ejs
@@ -25,6 +25,7 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         text-align: center;
         max-width: 400px;
+        margin-bottom: 400px;
       }
       h2 {
         color: #2ecc71;
@@ -50,8 +51,10 @@
         background: #2980b9;
       }
     </style>
+    <link rel="stylesheet" href="/style4.css" />
   </head>
   <body>
+    <%- include('./partials/navbar') %>
     <div class="message-container">
       <h2>Thank You!</h2>
       <p>
