--- a/views/barber.ejs
+++ b/views/barber.ejs
@@ -64,6 +64,11 @@
             >
               Book Appointment
             </button>
+            <button
+              onclick="window.location.href='/students/shops/barbershops/iitdhbarber/appointmentform';"
+            >
+              Check Status
+            </button>
           </div>
         </div>
       </div>
