seperate css for header and footer. deleted temp files (.html files)

--- a/views/barber.ejs
+++ b/views/barber.ejs
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barber Shop Details</title>
-    <link rel="stylesheet" href="/style4.css" />
+    <link rel="stylesheet" href="/barber.css" />
+    <link rel="stylesheet" href="/HeaderFootercss/header.css" />
+    <link rel="stylesheet" href="/HeaderFootercss/footer.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
