--- a/views/barberinputpost.ejs
+++ b/views/barberinputpost.ejs
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thank You</title>
-    <link rel="stylesheet" href="/style6.css" />
+    <link rel="stylesheet" href="/barberinputpost.css" />
+    <link rel="stylesheet" href="/HeaderFootercss/header.css" />
+    <link rel="stylesheet" href="/HeaderFootercss/footer.css" />
   </head>
   <body>
     <%- include('./partials/navbar') %>
@@ -13,12 +15,8 @@
       <p>
         Thanks for filling out the form. Your name has been added to the list.
       </p>
-      <a href="/students/shops/barbershops/iitdhbarber" class="home-button"
-        >Go Back to Home</a
-      >
+      <a href="/students/shops/" class="home-button">Go Back to Home</a>
     </main>
-    <footer>
-      &copy Barber Shop. All Rights Reserverd.
-    </footer>
+    <footer>&copy Barber Shop. All Rights Reserverd.</footer>
   </body>
 </html>
