--- a/views/barbershops.ejs
+++ b/views/barbershops.ejs
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>Barber shop</title>
-    <link rel="stylesheet" href="style3.css" />
+    <link rel="stylesheet" href="/barbershops.css" />
+    <link rel="stylesheet" href="/HeaderFootercss/header.css" />
+    <link rel="stylesheet" href="/HeaderFootercss/footer.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
