--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,18 +5,23 @@
     <link rel="stylesheet" href="/index.css" />
     <link rel="stylesheet" href="/HeaderFootercss/header.css" />
     <link rel="stylesheet" href="/HeaderFootercss/footer.css" />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
   </head>
   <body>
     <%- include('./partials/navbar') %>
     <main>
       <h1>Welcome to our Website!</h1>
       <ul id="shoplist">
+        <% Shops.forEach(shop => { %>
+
         <li>
-          <button onclick="window.location.href='barbershops';">
-            Barber shop
+          <button
+            onclick="window.location.href='<%= shop.name.toLowerCase().replace(` `,``) %>';"
+          >
+            <%= shop.name %>
           </button>
         </li>
+
+        <% }) %>
       </ul>
     </main>
     <footer>&copy Barber Shop. All Rights Reserverd.</footer>
