added a temporary list of students who filled the form

--- a/views/barber.ejs
+++ b/views/barber.ejs
@@ -71,6 +71,11 @@
             >
               Check Status
             </button>
+            <button
+              onclick="window.location.href='/students/shops/barbershops/iitdhbarber/list';"
+            >
+              Show List
+            </button>
           </div>
         </div>
       </div>
