--- a/views/barberinput.ejs
+++ b/views/barberinput.ejs
@@ -44,10 +44,10 @@
         <div>
           <label for="haircut">Preferred Haircut:</label>
           <select name="haircut" id="haircut">
-            <option value="1">Haircut 1</option>
-            <option value="2">Haircut 2</option>
-            <option value="3">Haircut 3</option>
-            <option value="4">Haircut 4</option>
+            <option value="bob">bob</option>
+            <option value="style">style</option>
+            <option value="natural">natural</option>
+            <option value="antisymmetric">antisymmetric</option>
           </select>
         </div>
         <input type="submit" />
